# projectbrain

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/02-git-diff-impact/: 02-PLAN.md
.planning/phases/03-agent-friendly-output/: 03-PLAN.md
.planning/phases/04-experience-claim-authoring/: 04-PLAN.md
.planning/phases/phase-6-observability-ui/: PLAN.md
Formula/: projectbrain.rb
apps/api/projectbrain_api/: __init__.py  dependencies.py  handlers.py  main.py
apps/api/projectbrain_api/ui/: __init__.py  (+1 more)
apps/tools/: codegraph_adapter_cli.py  projectbrain_runtime_cli.py
docs/: mcp-usage.md  open-source-checklist.md  prd.md  quickstart.md  release-readiness.md
docs/projectbrain/: README.md  agent-skills.md  api-contract.md  codegraph-integration.md  delivery-gap-analysis.md  design-document.md  domain-model.md  evaluation-plan.md  implementation-plan.md  knowledge-schema.md  local-runtime.md  mvp-architecture.md  refund-handling-fee-walkthrough.md
docs/superpowers/plans/: 2026-06-22-codex-brain-mvp.md  2026-06-26-v1-first-four-microbranches.md  2026-06-29-baseline-agent-output.md
docs/superpowers/specs/: 2026-06-22-projectbrain-local-app-brain-explorer-redesign.md  2026-06-29-baseline-agent-output-design.md
docs/zh/: quickstart.md
examples/payment-mini/: README.md  experience-seed.md  projectbrain-codegraph-export.json
tests/: fixtures.py  test_agent_output.py  test_api_fastapi.py  test_api_handlers.py  test_brain_api.py  test_brain_cli.py  test_brain_models.py  test_brain_repository.py  test_brain_service.py  test_brain_ui.py  test_bundle.py  test_claim_authoring.py  test_cli.py  test_codex_brain.py  test_context_pack.py  test_experience.py  test_git_diff_impact.py  test_impact_analysis.py  test_knowledge_store.py  test_mcp_server.py  test_policy.py  test_repository.py  test_runtime_store.py  test_schema_validation.py  test_ui_smoke.py
tests/packaging/: test_homebrew_formula.py
(+16 files in other folders)
