[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projectbrain-local"
version = "0.1.0"
description = "Local ProjectBrain runtime prototype backed by CodeGraph facts"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.28"]

[tool.setuptools.packages.find]
where = ["packages/adapters", "packages/runtime", "packages/schema", "apps/api"]

[tool.unittest]
start-directory = "tests"
