[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projectbrain-local"
version = "0.2.2"
description = "Local ProjectBrain runtime backed by CodeGraph facts"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30", "httpx>=0.28", "jinja2>=3.1", "python-multipart>=0.0.9"]

[tool.setuptools.packages.find]
where = ["packages/adapters", "packages/runtime", "packages/schema", "apps/api"]

[tool.setuptools.package-data]
"projectbrain_api.ui" = ["templates/**/*.html", "static/**/*.css", "static/vendor/*.md", "templates/**/.gitkeep"]

[project.scripts]
projectbrain = "projectbrain_cli.main:main"
codex-brain = "projectbrain_cli.codex_brain:main"

[tool.unittest]
start-directory = "tests"
